--- a/app/src/main/res/layout/activity_login_gate.xml
+++ b/app/src/main/res/layout/activity_login_gate.xml
@@ -18,56 +18,68 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="612dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/beebg"
-            />
+            tools:layout_editor_absoluteY="8dp"
+            tools:layout_editor_absoluteX="8dp" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent="0.025"
+            android:id="@+id/guideline5"
+            android:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/aboutLink"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:text="About SwarmReporter"
+            android:textColor="@color/link"
+            android:textSize="20sp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guideline5" />
 
         <Button
             android:id="@+id/gateLoginButton"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bivouac_button"
             android:padding="8dp"
             android:text="Log In"
+            android:gravity="center"
             android:textColor="@color/primary_text"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="@+id/guideline4"
-            android:layout_marginTop="8dp" />
+            />
 
-        <Button
-            android:id="@+id/gateRegisterButton"
+        <TextView
+            android:id="@+id/gateRegisterText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/bivouac_button"
             android:text="Register New Account"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/link"
+            android:gravity="center_horizontal"
             android:padding="10dp"
             app:layout_constraintTop_toBottomOf="@+id/gateLoginButton"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="8dp" />
-
-        <Button
-            android:id="@+id/aboutButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bivouac_button"
-            android:text="About SwarmReporter"
-            android:textColor="@color/primary_text"
-            app:layout_constraintTop_toBottomOf="@+id/gateRegisterButton"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginStart="8dp" />
+            android:layout_marginStart="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
