--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -48,23 +48,6 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent" />
 
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:textColor="?android:textColorHint"
-            android:textSize="19sp"
-            android:text="Allow people to call me"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView" />
 
         <EditText
             android:id="@+id/phoneNumberTextView"
@@ -74,7 +57,7 @@
             android:hint="(optional) Enter your phone number"
             android:inputType="phone"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/switch1"
+            app:layout_constraintTop_toBottomOf="@+id/emailInputTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
@@ -89,7 +72,7 @@
             android:hint="Enter your password"
             android:inputType="textPassword"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/emailInputTextView"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
@@ -116,7 +99,7 @@
             android:background="@drawable/bivouac_button"
             android:text="Register"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
+            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
